--- a/libro/Seguridad.tex
+++ b/libro/Seguridad.tex
@@ -849,18 +849,25 @@ para acometer las tareas de protección reseñadas en los puntos anteriores.
 
 \subsubsection{Cortocircuitos}
 
-El cortocircuito es un punto de trabajo no peligroso para el generador
-fotovoltaico. Puede, sin embargo, ser perjudicial para el inversor.
-Como medio de protección se recomienda incluir fusibles en cada polo%
-\footnote{Para instalaciones fotovoltaicas son de uso común los fusibles de
-tipo gG normalizados según la norma EN 60269.%
+El cortocircuito es un punto de trabajo no peligroso para un módulo o
+rama fotovoltaica. Sin embargo, cuando se conectan varias ramas en
+paralelo, al establecerse un cortocircuito puede circular por una rama
+una corriente inversa alimentada por el resto de ramas. Para limitar
+esta corriente inversa, la norma IEC 62548 exige el empleo de fusibles
+como medio de protección, teniendo en cuenta el número de ramas y la
+corriente máxima que admite el módulo. En cualquier caso, en
+generadores con varias ramas se recomienda incluir fusibles en cada
+rama y polo%
+\footnote{Para instalaciones fotovoltaicas son de uso común los
+  fusibles de tipo gG normalizados según la norma EN 60269.%
 }. Por otra parte, el portafusible asociado sirve como elemento de
-seccionamiento, facilitando las tareas de mantenimiento. Aunque el
-cortocircuito no sea peligroso para el generador, su establecimiento
-o extinción pueden ocasionar fácilmente un arco eléctrico si la maniobra
-no se realiza con suficiente celeridad. De ahí que el seccionamiento
-de parte del generador empleando los portafusibles deba realizarse
-exclusivamente cuando el inversor se encuentra en modo de parada. 
+seccionamiento, facilitando las tareas de mantenimiento. Ahora bien,
+el establecimiento o la extinción de un cortocircuito pueden ocasionar
+fácilmente un arco eléctrico si la maniobra no se realiza con
+suficiente celeridad. De ahí que el seccionamiento de parte del
+generador empleando los portafusibles deba realizarse exclusivamente
+cuando el inversor se encuentra en modo de parada, asegurando que no
+circula corriente por las ramas correspondientes..
 
 Por otra parte, para evitar cortocircuitos ocasionados por eventuales
 pérdidas de aislamiento en cables, es recomendable la conducción separada
